--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9ecb3ce13a.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
